corrigiendo detalles de acentos en html

--- a/pages/mensajes.html
+++ b/pages/mensajes.html
@@ -44,7 +44,7 @@
 
             <div class="section-mensajes">
                 <div class="p-mensajes">
-                    <p>En mensajes encontraras una via de comunicacion con la conduccion y maestros/as</p>
+                    <p>En mensajes encontraras una via de comunicación con la conducción y maestros/as</p>
                 </div>
                 <!--para caja mail use tabla de Boostrap-->
                 <div class="mail">
