--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -47,7 +47,7 @@
                 <div class="ayuda">
                     <!--use otro logo y clase dif del logo Memo Cloud para que tenga color negro-->
                     <i class="fa-solid fa-folder-open"></i>
-                    <h3>Informacion</h3>
+                    <h3>Información</h3>
                 </div>
                 <div class="ayuda">
                     <i class="fa-solid fa-circle-question question-ayuda"></i>
